// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions SourceUpdate 1`] = `
Object {
  "type": "uiSource",
  "value": "test",
}
`;

exports[`actions localeUpdate 1`] = `
Object {
  "type": "uiLocale",
  "value": "test",
}
`;

exports[`actions updatePeriod 1`] = `
Object {
  "type": "uiPeriod",
  "value": 123,
}
`;
